Fit to blur fliter bug on Safari
Blur would get stuck and cause performance drops on Safari. Adding "transform" in CSS along with blur has seemed to fix this problem.

--- a/css/style.css
+++ b/css/style.css
@@ -481,10 +481,13 @@ p {
 img {
   transition: all 0.5s;
   opacity: 1;
+  filter: blur(0px);
+  transition: all 0.5s;
 }
 
 .lazy-img {
   filter: blur(20px);
+  transform: translate3d(0, 0, 0);
 }
 
 /* CURRENT WORK */
